--- a/music_app/app/views/bands/show.html.erb
+++ b/music_app/app/views/bands/show.html.erb
@@ -1,22 +1,22 @@
 <section>
   <h2><%= @band.name %> Profile Page</h2>
 
-<form class="" action="<%= edit_band_url %>" method="get">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <form class="" action="<%= edit_band_url %>" method="get">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <input type="submit" value="Edit Band">
-</form>
+    <input type="submit" value="Edit Band">
+  </form>
 
-<form class="" action="<%= band_url(@band) %>" method="post">
-  <input type="hidden" name="_method" value="delete">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <form class="" action="<%= band_url(@band) %>" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <input type="submit" value="Delete Band">
-</form>
+    <input type="submit" value="Delete Band">
+  </form>
 </section>
 
 <p>Albums</p>
-<% albums = Album.where(band_id: @band.id);%>
+<% albums = Album.where(band_id: @band.id)%>
 <% if albums.empty? %>
   <%= "This band has no albums." %>
 <% else %>
